# Compress-Algo-DEFLATE

./: .gitignore  CMakeLists.txt  compress2.cpp  main.cpp  path.cpp  readme.md  time_def.cpp  time_def.h  zlib_test.cpp  zlib_test.h
headers/: path.h  zlib_test.h
sources/: compress2.cpp  libdeflate.cpp  m_compress.cpp  path.cpp  time_def.cpp  zlib_test.cpp
